feat: add air and fix bug
